# vector-view

./: .clang-format  .env.example  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Interface.cpp  Interface.h  LICENSE  LinkManager.cpp  LinkManager.h  README.md  README.md~  VectorGUI.cpp  VectorView.cpp  VectorView.h  robot.world  run.sh
.cursor/rules/: simulation-honesty.mdc
.cursor/skills/report-writing/: SKILL.md
.cursor/skills/report-writing/references/: report-template.md  sre-principles.md
.github/workflows/: build.yml  release.yml
_products/: icub-vector-view.md
assets/models/box/: model.sdf
assets/models/cylinder/: model.config
assets/models/icub/: icub.sdf
assets/models/icub_contact/: model.config
assets/models/icub_contact_release/: icub_contact_release.sdf
assets/models/sphere/: model.config  model.sdf
assets/trajectories/: stage_test_tasks.golden.json
assets/worlds/: release_demo.world  robot.world
docs/: codyco-log-format.md  estimate.md  execution-comparison-requirements.md  execution-comparison-validation-report.md  fix-plan.md  golden-trajectory.md  issues-report.md  modern-grasp-controller.md  no-regression-report.json  simulation-honesty.md  strengths-report.md  v1-audit.md
include/DspFilters/: Filter.h  ForceFilter.h
include/common/: Constants.h
include/vectorGUI/: Interface.h
include/vectorview/: Constants.h  ContactMessage.h  ContactUtils.h  ForceFilter.h  Interface.h  ModelContext.h  NameUtils.h  TopicPath.h  VectorView.h
models/box/: model.config  model.sdf
models/cylinder/: model.sdf
models/icub/: icub.sdf
models/icub_contact/: icub_contact.sdf
models/icub_contact_release/: icub_contact_release.sdf  model.config
models/sphere/: model.sdf
old_plugins/: ContactManager.cpp  ContactManager.h  ICubStage.cpp  ICubStage.h  Interface.cpp
plugins/include/: Interface.h  SystemGUI.h
plugins/src/: Interface.cpp  SystemGUI.cpp  VectorView.cpp
scilab/: 20s.10it.force.xpos  3plot.m  script.m  script.m~
scilab/old_histories/: 2history_iCub_fixed_l_hand.txt  2history_iCub_fixed_r_hand.txt  td_var_history_iCub_fixed_l_hand.txt  td_var_history_iCub_fixed_r_hand.txt
scripts/: animate_grasp.sh  animate_release_demo.sh  capture_comparison.sh  codyco_log_import.py  contact_monitor.py  format.sh  grasp_task_controller.py  overlay_force_arrows.py  preview_camera_frame.py  record_force_plot.py  record_golden_trajectory.py  record_release_video.sh  replay_golden_trajectory.py  run.sh  save_camera_frame.py  test_contact.sh  trajectory_lib.py  verify_no_regression.py  verify_release_video.py
scripts/legacy/: README.md  record_stage_test_tasks_yarp.py
src/DspFilters/: ForceFilter.cpp
src/common/: ContactMessage.cpp  ContactUtils.cpp  TopicPath.cpp
src/filters/: ForceFilter.cpp
src/gui/: Interface.cpp  VectorGUI.cpp
src/plugin/: VectorView.cpp
src/vectorGUI/: Interface.cpp  VectorGUI.cpp
src/vectorview/: NameUtils.cpp  VectorView.cpp
tests/: CMakeLists.txt  test_contact_utils.cpp  test_findname.cpp  test_force_filter.cpp  test_forcefilter.cpp  test_grasp_controller.py  test_release_video.py  test_trajectory_lib.py
tests/fixtures/: stage_test_tasks.codyco-log.json  stage_test_tasks.frames.csv  stage_test_tasks.frames.jsonl
worlds/: release_demo.world  robot.world
